--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>17</java.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<azure-storage-blob.version>12.28.0</azure-storage-blob.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -88,6 +89,13 @@
 		    <groupId>org.projectlombok</groupId>
 		    <artifactId>lombok-mapstruct-binding</artifactId>
 		    <version>${lombok-mapstruct-binding.version}</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.azure/azure-storage-blob -->
+		<dependency>
+		    <groupId>com.azure</groupId>
+		    <artifactId>azure-storage-blob</artifactId>
+		    <version>${azure-storage-blob.version}</version>
 		</dependency>
 		
 		<dependency>
