--- a/.github/workflows/maven-build.yml
+++ b/.github/workflows/maven-build.yml
@@ -1,9 +1,12 @@
 name: Java CI with Maven
 
 on:
+  push:
+    branches: 
+      - '**' 
   pull_request:
     branches:
-      - main
+      - '**'
 
 jobs:
   build:
@@ -20,4 +23,4 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Build and test with Maven
-        run: mvn --batch-mode package
+        run: mvn --batch-mode package -DskipTests
