--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<azure-storage-blob.version>12.28.0</azure-storage-blob.version>
 		<poi.version>5.3.0</poi.version>
+		<commons-text.version>1.12.0</commons-text.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -112,8 +113,14 @@
 		    <artifactId>poi-ooxml</artifactId>
 		    <version>${poi.version}</version>
 		</dependency>
-
 		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>${commons-text.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
