MODIFY: add api field in application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,3 +60,7 @@ azure:
       name: ${AZURE_STORAGE_CONTAINER_NAME}
     connection:
       string: ${AZURE_CONNECTION_STRING}
+
+# api
+api:
+  prefix: /api/v1
