--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,15 @@
 	      	<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 	      	<version>2.6.0</version>
    		</dependency>
+   		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-redis</artifactId>
+		</dependency>
+		<!-- Lettuce (Redis Client) -->
+	    <dependency>
+	        <groupId>io.lettuce</groupId>
+	        <artifactId>lettuce-core</artifactId>
+	    </dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
