--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,16 @@ spring:
       uri: ${MONGODB_URI}
       database: Toeic
       auto-index-creation: true
+    redis:
+      host: redis
+      port: 6379
+      password: ${REDIS_PASSWORD}
+      timeout: 60000
+      lecttuce:
+        pool:
+          max-active: 10
+          max-idle: 5
+          min-idle: 2
   servlet:
     multipart:
       max-file-size: 100MB
