ADD: cache get list questions and sort by question number

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ client:
 spring:
   application:
     name: toeic-practice-backend
+  cache:
+    type: redis
   data:
     mongodb:
       uri: ${MONGODB_URI}
