--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
 	      	<version>2.6.0</version>
    		</dependency>
    		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-cache</artifactId>
+		</dependency>
+   		<dependency>
 		    <groupId>org.springframework.data</groupId>
 		    <artifactId>spring-data-redis</artifactId>
 		</dependency>
